assets/css/styles.css
:root{
    --primary-color:#ffcf40;
    --secondary-color:  #999999;
}

form {
    display: flex;
    flex-direction: row;
}
input {
    border-radius: 25px;
    border: 4px;
    padding: 15px;
    width: 200px;
    height: 50px;
}


button {
    display: flex;
    background: transparent;
    border: none;
    outline: none;

}

section h2 {
    font-weight: bold;
    font-size: 20px;
    text-align: center;
}

.flex {
    display: flex;
    border: solid 2px;
    flex-basis: content;
}  

.flex2 {
    flex-wrap: wrap;
    margin-left: 10px;
    padding-left: 20px; 
}  

.flex2 h3 {
    font-weight: bold;
}


header {
    background-color: var(--primary-color);
}

.material-icons {
    align-self: center;
    margin: right;
    font-size: 35px !important;
  
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
  
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;
  
    /* Support for IE. */
    font-feature-settings: 'liga';
  }

